Fix build with libheif 1.20

https://github.com/strukturag/libheif/issues/1419 introduced a
source incompatible api change, this patch by Brad Smith make
Krita build with 1.20. I've also checked with 1.15.2, which we
use and it still builds.

BUG:506778
(cherry picked from commit 6ad4fa68a9e1ce06fc884e34f3cedcdd4b9a2076)